<resources>
    <string name="app_name">SensorCare</string>
    <string name="text_record">输入此用户相关备注</string>
    <string name="title_name">姓名</string>
    <string name="details_room">房间号</string>
    <string name="details_state">状态</string>
    <string name="details_ble">绑定设备蓝牙地址</string>
    <string name="show_debug">显示调试用户</string>
    <string name="hide_debug">关闭调试用户</string>
    <string name="switch_debug">调试模式</string>
    <string name="switch_watch">监测</string>
    <string name="make_debug_title">请输入开发者密钥</string>
    <string name="make_debug_ok">确认</string>
    <string name="make_debug_cancel">取消</string>
    <string name="make_log_title">监测记录</string>
    <string name="text_help_title">监测记录与备注</string>
    <string name="add_log_button">添加监测记录</string>
    <string name="true_positive">系统报警且发生离床行为</string>
    <string name="true_negative">系统报警但未发生离床行为</string>
    <string name="false_positive">系统未报警但发生离床行为</string>
    <string name="tag_disconnect">传感器断连</string>
    <string name="choose_alert">选择报警模式</string>
    <string name="alert_vibrate">手机震动</string>
    <string name="alert_sound">报警音效</string>
    <string name="write_log">记录写入本地文件</string>
</resources>
